--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<tml lang="ja">
+<html lang="ja">
+
   <head>
     <meta charset="UTF-8" />
+    <title>jQuery</title>
   </head>
 
   <body>
+    <a href="one.html">ワン</a>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
