--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="style.css">
     <title>jQuery</title>
   </head>
 
   <body>
-    <div id="box"></div>
+    <div id="contents">
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="app.js"></script>
+        \・・・（長い文章）・・・/
+
+
+    </div>
+
+    <a href="#" class="back-to-top">▲</a>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="app.js"></script>
   </body>
 </html>
